--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ aws/modules/ec2/local-exec-output-files/
 **/.terraform/
 **/local-exec-output-files
 **/private-key
-**.terraform.lock.hcl
 **/private-key/
-**.terraform.lock.hcl
+**variables.auto.tfvars
+.vscode
+notes
