--- a/aws/ansible/certbot.yml
+++ b/aws/ansible/certbot.yml
@@ -1,113 +1,183 @@
 ---
-- name: Certbot debian play
-  hosts: 
-    - debian
-  tasks:
-    # Update OpenSSH and verify it's updated
-    - name: Update OpenSSH on Debian and Ubuntu
-      become: true
-      apt:
-        name: openssh-client
-        state: latest
-
-    - name: Check OpenSSH client version on Debian and Ubuntu
-      become: true
-      shell: ssh -V
-      register: ssh_version
-
-    - debug:
-        var: ssh_version.stdout_lines
-
-    # Install Certbot and verify installation
-    - name: Install Certbot on Debian and Ubuntu
-      become: true
-      apt_repository:
-        repo: 'ppa:certbot/certbot'
-
-    - name: Verify Certbot repository is added
-      become: true
-      shell: apt-cache policy | grep -q 'certbot/certbot'
-      register: certbot_repository
-
-    - name: Debug Certbot repository verification
-      debug:
-        var: certbot_repository.stdout_lines
-
 - name: Certbot redhat play
   hosts: 
     - redhat
+  serial: 1
   tasks:
-    # Enable EPEL and verify it's enabled
-    - name: Check if EPEL repository is installed on Red Hat
+    - name: Redhat - Ensure dnf-plugins are installed.
       become: True
-      yum:
-        list: epel-release
-      register: epel_status
-
-    - name: Display EPEL repository status
-      debug:
-        var: epel_status
-
-    - name: Ensure dnf-plugins are installed on CentOS 8+.
       yum:
         name: dnf-plugins-core
         state: present
-  
-    - name: Enable DNF module for CentOS 8.3+.
-      shell: |
-        dnf config-manager --set-enabled powertools
-      register: dnf_module_enable
-      changed_when: false
 
-      when: ansible_facts['distribution_version'] is version('8.3', '>=')
+    - name: Redhat - Update package cache
+      become: True
+      dnf:
+        update_cache: yes
 
-    - name: Ensure snapd is installed.
+    - name: Redhat - Import EPEL PGP key.
+      become: True
+      rpm_key:
+        key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-9
+        state: present
+
+    - name: Redhat - Install EPEL repo.
+      become: True
+      yum:
+        name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
+        state: present
+
+    - name: Redhat - Enable EPEL
+      become: True
+      dnf:
+        name: epel-release
+        state: present
+        enablerepo: extras
+
+    - name: Redhat - Install snapd
+      become: True
+      dnf:
+        name: snapd
+        state: present
+        enablerepo: epel
+
+    - name: Redhat - Ensure snapd is installed.
+      become: True
       package:
         name: snapd
         state: present
       register: snapd_install
 
-    - name: Ensure snapd is enabled.
+    - name: Redhat - Enable snapd
+      become: True
       systemd:
         name: snapd.socket
-        enabled: true
+        enabled: True
         state: started
 
-    - name: Enable classic snap support.
+    - name: Redhat - Enable classic snap support.
+      become: True
       file:
         src: /var/lib/snapd/snap
         dest: /snap
         state: link
       when: ansible_os_family != "Debian"
 
-    - name: Update snap after install.
+    - name: Redhat - Update snap after install.
+      become: True
       shell: snap install core; snap refresh core
-      changed_when: true
+      changed_when: True
       failed_when: false
       when: snapd_install is changed
 
-    - name: Install certbot via snap.
+    - name: Redhat - Install certbot via snap.
+      become: True
       snap:
         name: certbot
-        classic: true
+        classic: True
 
-    - name: Symlink certbot into place.
+    - name: Redhat - Symlink certbot into place.
+      become: True
       file:
         src: /snap/bin/certbot
         dest: /usr/bin/certbot
         state: link
       ignore_errors: "{{ ansible_check_mode }}"
 
-    - name: Set Certbot script variable.
+    - name: Redhat - Set Certbot script variable.
+      become: True
       set_fact:
         certbot_script: /usr/bin/certbot
+    
+    # VERIFY Certbot is installed REDHAT
+    - name: Redhat - verify Certbot is installed
+      become: True
+      yum:
+        list: certbot
+      register: certbot_installed
+      changed_when: false
+      check_mode: no
 
-    # Update OpenSSH on RedHat and verify the update
-    - name: Update OpenSSH on RedHat
-      become: true
+    - name: Redhat - Update OpenSSH on RedHat
+      become: True
       dnf:
         name: openssh-server
         state: latest
 
+    # VERIFY OpenSSH does not require udpates REDHAT
+    - name: Red Hat - Verify OpenSSH does not require an update
+      become: true
+      yum:
+        name: openssh-server
+        state: latest
+      register: yum_output
+      changed_when: false
+      check_mode: no
+
+- name: Certbot debian play
+  hosts: 
+    - debian
+  tasks:
+    - name: Debian - Update OpenSSH on Debian and Ubuntu
+      become: True
+      apt:
+        name: openssh-client
+        state: latest
+
+    - name: Update APT Cache
+      become: True
+      apt:
+        update_cache: yes
+        force_apt_get: yes
+
+    - name: Remove apt lock file
+      become: True
+      file:
+        state: absent
+        path: "/var/lib/dpkg/lock"
+
+    # VERIFY openssh does not rquire updates DEBIAN
+    - name: Debian - Verify OpenSSH does not require an update
+      become: True
+      apt:
+        name: openssh-server
+        update_cache: yes
+        state: latest
+      register: apt_output
+      changed_when: False
+      check_mode: no
+
+    - name: Debian - Install Snap on Ubuntu
+      become: True
+      apt:
+        name: snapd
+        state: present
+
+    - name: Debian - Install Certbot with Snap on Ubuntu
+      become: True
+      snap:
+        name: certbot
+        classic: yes
+        channel: stable
+
+    - name: Debian - Check Certbot status
+      become: True
+      systemd:
+        name: snap.certbot.renew.service
+        state: started
+        enabled: yes
+      register: certbot_status
+
+    # VERIFY certbot is installed DEBIAN
+    - name: Debian - Verify certbot is installed
+      become: True
+      package:
+        name: certbot
+        state: present
+      register: certbot_installed
+      check_mode: no
+
 # cd ansible
 # ansible-playbook -i inventory certbot.yml
+
+
