--- a/aws/ansible/ansible.cfg
+++ b/aws/ansible/ansible.cfg
@@ -1,3 +1,5 @@
 [defaults]
-inventory = hosts-lf
-private_key_file = ~/.ssh/lf-ansible
+enable_plugins = aws_ec2
+inventory = aws_ec2.yml
+remote_user = ubuntu
+private_key_file = /home/ubuntu/.ssh/lf-ansible
